if(EMSCRIPTEN)
  # set(CMAKE_EXECUTABLE_SUFFIX ".html")

  add_executable(em_ngs em_ngs.cpp)
  target_include_directories(em_ngs PRIVATE ${ZLIB_INCLUDE_DIRS})
  target_link_libraries(em_ngs PUBLIC ngcomp ngfem ngcore nglib ${ZLIB_LIBRARIES})
  target_link_options(em_ngs PUBLIC -sALLOW_MEMORY_GROWTH)
  target_link_options(em_ngs PUBLIC -s ENVIRONMENT=web)
  # target_link_options(em_ngs PUBLIC -sINITIAL_MEMORY=1gb)
  target_link_options(em_ngs PUBLIC -lembind)
  target_link_options(em_ngs PUBLIC --export-all)
  target_link_options(em_ngs PUBLIC -sEXPORT_ES6=1 -sMODULARIZE -sEXPORT_NAME="createMyModule")
  # target_link_options(em_ngs PUBLIC --pre-js /home/matthias/src/webgui/dist/webgui.js )
  # target_compile_options(em_ngs PUBLIC -pthread)
endif(EMSCRIPTEN)
