if(EMSCRIPTEN)
  add_executable(em_ngs em_ngs.cpp)
  target_include_directories(em_ngs PRIVATE ${ZLIB_INCLUDE_DIRS})
  target_link_libraries(em_ngs PUBLIC ngcomp ngfem ngla ngbla ngstd nglib ${NETGEN_ZLIB_LIBRARIES})
  target_link_options(em_ngs PUBLIC -sALLOW_MEMORY_GROWTH)
  target_link_options(em_ngs PUBLIC -lembind)
  target_link_options(em_ngs PUBLIC -sEXPORT_ES6=1 -sMODULARIZE) # -sLINKABLE)
endif(EMSCRIPTEN)
