install(DIRECTORY netgen/external_dependencies/pybind11/include/pybind11 DESTINATION include COMPONENT ngsolve_devel)
install(FILES netgen/external_dependencies/pybind11/LICENSE DESTINATION include/pybind11 COMPONENT ngsolve_devel)
if(BUILD_NETGEN)
  add_subdirectory(netgen)
  add_dependencies(mesh check_submodules_start)
  add_dependencies(occ check_submodules_start)
endif()
